# spotify-midi-control

./: Cargo.toml  README.md  default.nix  flake.nix  module.nix  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: bwjn6mqam044a4qam9q8gfjga5qqnq4x-source
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-16-hardening-review-fixes.md
src/: main.rs  midi.rs  rt_midi_queue.rs  spotify.rs
