[package]
name = "spotify-midi-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
jack = "0.11.4"
libspa = "0.10.0"
pipewire = "0.10.0"
rustbus = "0.19.3"
rtrb = "0.3.2"
